# venus

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Makefile  README.md
guest/zisk-eth-client/: .gitignore  Cargo.toml  README.md
guest/zisk-eth-client/scripts/: block_metrics.sh  organize-fitxtures.sh  parse_hints.sh  process-metrics.py
pil2-compiler-rust/: Cargo.toml  build.rs
pil2-compiler-rust/src/: field.rs  lib.rs  main.rs  proto_out.rs
pil2-compiler-rust/src/parser/: ast.rs  grammar.lalrpop  lexer.rs  mod.rs  pil2.pest
pil2-compiler-rust/src/processor/: air.rs  builtins.rs  constraints.rs  context.rs  expression.rs  fixed_cols.rs  ids.rs  mod.rs  mod_air_template_call.rs  mod_declarations.rs  mod_eval.rs  mod_hints.rs  mod_tests.rs  mod_utils.rs  mod_vardecl.rs  references.rs  variables.rs
pil2-compiler-rust/tests/: alias_expr_imports_to_single_packed_root.rs  bare_hint_leaf_no_arena_inflation.rs  bare_ref_alias_no_anonymous_wrapper.rs  compound_assign_zero_fold_regression.rs  cross_air_custom_col_regression.rs  customcol_commit_id_in_range.rs  dma_scoped_witness_regression.rs  expr_ref_identity_preserves_across_reads.rs  foreign_intermediate_dedup_regression.rs  foreign_origin_hint_leaf_resolves_through_registry.rs  gsum_col_reference_regression.rs  minimal_lazy_expr_reification_regression.rs  nested_fixed_array_regression.rs  origin_scoped_cross_air_post_flatten_regression.rs  origin_scoped_intermediate_ref_resolves_per_air.rs  proof_scope_symbolic_regression.rs  recursive1_compile.rs  tables_statement_dispatch_regression.rs  virtual_table_regression.rs  witness_calc_regression.rs  zero_fill_diagnostic_regression.rs  zisk_global_constraints_parity.rs
pil2-compiler-rust/tests/data/: dma_scoped_witness_regression.pil  minimal_alias_expr.pil  minimal_compound_assign_zero_fold.pil  minimal_cross_air_custom.pil  minimal_empty_fixed_col_warning.pil  minimal_expr_ref_identity.pil  minimal_gsum_col.pil  minimal_lazy_expr_reification.pil  minimal_nested_fixed_array.pil  minimal_origin_scoped_cross_air.pil  minimal_proof_scope_hint.pil  minimal_tables_copy_warning.pil  minimal_tables_statement_dispatch.pil  minimal_virtual_table.pil  minimal_witness_calc.pil  recursive1_aggregator.pil
pil2-proofman/: .gitignore  Cargo.toml  DEBUG_JSON.md  README.md  book.toml
pil2-proofman/.github/workflows/: ci.yaml
pil2-proofman/book/: quickstart.md
pil2-proofman/cli/: Cargo.toml
pil2-proofman/cli/src/: main.rs
pil2-proofman/common/: Cargo.toml
pil2-proofman/common/src/: air_instance.rs  constraints.rs  custom_commits.rs  distribution_ctx.rs  error_manager.rs  fixed_cols.rs  global_info.rs  lib.rs  memory_handler.rs  mpi_ctx.rs  packed_info.rs  proof_ctx.rs  prover.rs  publics.rs  publics_info.rs  recursive_runtime.rs  setup.rs  setup_ctx.rs  soundness.rs  stark_info.rs  std_mode.rs  trace.rs  utils.rs  verbose_mode.rs
pil2-proofman/curves/: Cargo.toml
pil2-proofman/curves/src/: curve.rs  ecgfp5.rs  ecmasfp5.rs  lib.rs
pil2-proofman/examples/fibonacci-square/: Cargo.toml  README.md
pil2-proofman/examples/test-recursive/: Cargo.toml  README.md  test.circom  test.verifier.circom
pil2-proofman/fields/: Cargo.toml
pil2-proofman/fields/src/: extended_field.rs  field.rs  fri.rs  goldilocks.rs  goldilocks_quintic_extension.rs  integers.rs  lib.rs  poseidon2.rs  poseidon2_constants.rs  transcript.rs  utils.rs
pil2-proofman/hints/: Cargo.toml
pil2-proofman/hints/src/: global_hints.rs  hints.rs
pil2-proofman/macros/: Cargo.toml
pil2-proofman/macros-test/: Cargo.toml
pil2-proofman/macros-test/src/: lib.rs
pil2-proofman/macros/src/: lib.rs  packed_row.rs  trace.rs  trace_row.rs  unpacked_row.rs
pil2-proofman/pil2-components/: README.md
pil2-proofman/pil2-components/test/: COMMANDS.md  run_all_tests.sh
pil2-proofman/pil2-stark/: .gitignore  Makefile  README.md
pil2-proofman/pil2-stark/tools/: gen_expression_evaluator.py  gen_multifile_evaluator.py
pil2-proofman/pilout/: Cargo.toml
pil2-proofman/pilout/src/: pilout_proxy.rs
pil2-proofman/proofman/: Cargo.toml  build.rs
pil2-proofman/proofman/src/: challenge_accumulation.rs  lib.rs  proof_manager.rs  proofman.rs  recursion.rs  snark_wrapper.rs  utils.rs  verify.rs  verify_constraints.rs
pil2-proofman/provers/starks-lib-c/: Cargo.toml  bindings_starks.rs  build.rs
pil2-proofman/soundness/: Cargo.toml
pil2-proofman/soundness/src/: lib.rs  soundness.rs
pil2-proofman/util/: Cargo.toml
pil2-proofman/util/src/: cli.rs  lib.rs  proof.rs  timer_macro.rs
pil2-proofman/verifier/: Cargo.toml
pil2-proofman/verifier/src/: lib.rs  recursive2_verifier.rs  vadcop_final_verifier.rs  vadcop_final_verifier_compressed.rs  verifier.rs
pil2-proofman/witness/: Cargo.toml
pil2-proofman/witness/src/: witness_component.rs  witness_library.rs  witness_manager.rs
pil2-stark-setup/: Cargo.toml
pil2-stark-setup/src/: bctree.rs  bctree_main.rs  bin_file.rs  bin_file_writer.rs  codegen.rs  compressed_final.rs  compressor_check.rs  constraint_poly.rs  expression.rs  final_setup.rs  fixed_cols.rs  fri_poly.rs  generate_pil_code.rs  global_constraints.rs  helpers.rs  im_polynomials.rs  json_output.rs  lib.rs  main.rs  map.rs  ntt.rs  parser_args.rs  pil_info.rs  pilout_info.rs  prepare_pil.rs  print_expression.rs  recursive_setup.rs  security.rs  setup_cmd.rs  stark_info.rs  stark_struct.rs  types.rs  validation.rs  verifier_rs_gen.rs  witness_gen.rs
pk-setup-rs/: Cargo.toml
pk-setup-rs/src/: circom_assets.rs  circom_compile.rs  fixed_gen.rs  frops.rs  main.rs  pilout_info.rs  recursive_cache.rs  recursive_circom.rs  recursive_generation.rs  setup_layout.rs  stark_struct.rs
pk-setup-rs/src/pil_info/: analysis.rs  binfile.rs  codegen.rs  format.rs  global.rs  mod.rs  stark.rs
pk-setup-rs/src/recursive_setup/: air.rs  circuit.rs  gadgets.rs  manifest.rs  mod.rs  plonk.rs  r1cs.rs  runtime.rs
stark-recurser-rust/: Cargo.toml
stark-recurser-rust/src/: f3g.rs  gencircom.rs  lib.rs  pil2circom.rs  pil2circom_helpers.rs  template.rs
stark-recurser-rust/src/plonk2pil/: aggregation_setup.rs  mod.rs  (+5 more)
(+1001 files in other folders)
