[workspace.package]
version = "0.15.0"
edition = "2021"
license = "Apache-2.0 or MIT"
keywords = ["zisk", "zkvm", "zero-knowledge"]
repository = "https://github.com/0xPolygonHermez/zisk"
categories = ["cryptography"]

[workspace.metadata]
gha_pil2_proofman_js_branch = "tags/v0.15.0"
gha_pil2_compiler_branch = "tags/v0.8.0"

[workspace]
members = [
    # Zisk crates
    "cli",
    "core",
    "data-bus",
    "emulator",
    "executor",
    "pil",
    "riscv",
    "rom-setup",
    "state-machines/arith",
    "state-machines/binary",
    "state-machines/main",
    "state-machines/mem",
    "state-machines/mem-cpp",
    "state-machines/rom",
    "witness-computation",
    "ziskos/entrypoint",
    "precompiles/arith_eq",
    "precompiles/arith_eq_384",
    "precompiles/common",
    "precompiles/keccakf",
    "precompiles/sha256f",
    "precompiles/big_int",
    "lib-c",
    "lib-float",
    "emulator-asm/asm-runner",
    "ziskclib",
    "common",
    "tools/circuit",
    "server",
    "distributed/crates/coordinator",
    "distributed/crates/grpc-api",
    "distributed/crates/common",
    "distributed/crates/worker",
    "sdk",
    "ziskbuild",

    # pil2-proofman core crates
    "pil2-proofman/cli",
    "pil2-proofman/curves",
    "pil2-proofman/common",
    "pil2-proofman/fields",
    "pil2-proofman/hints",
    "pil2-proofman/pilout",
    "pil2-proofman/proofman",
    "pil2-proofman/macros",
    "pil2-proofman/provers/starks-lib-c",
    "pil2-proofman/witness",
    "pil2-proofman/util",
    "pil2-proofman/verifier",

    # pil2-proofman PIL2 components library
    "pil2-proofman/pil2-components/lib/std/rs",

    # pil2-proofman PIL2 component tests
    "pil2-proofman/pil2-components/test/connection/rs",
    "pil2-proofman/pil2-components/test/diff_buses/rs",
    "pil2-proofman/pil2-components/test/direct_update/rs",
    "pil2-proofman/pil2-components/test/lookup/rs",
    "pil2-proofman/pil2-components/test/one_instance/rs",
    "pil2-proofman/pil2-components/test/permutation/rs",
    "pil2-proofman/pil2-components/test/range_check/rs",
    "pil2-proofman/pil2-components/test/simple/rs",
    "pil2-proofman/pil2-components/test/virtual_tables/rs",

    # pil2-proofman examples
    "pil2-proofman/examples/fibonacci-square",
    "pil2-proofman/examples/test-recursive",
    "pil2-proofman/macros-test",
]

resolver = "2"

[profile.release]
opt-level = 3

[profile.release.package."proofman-verifier"]
opt-level = 0

[profile.bench]
opt-level = 3

[workspace.dependencies]
# Internal crates
cargo-zisk = { path = "cli" }
zisk-common = { path = "common" }
zisk-core = { path = "core" }
data-bus = { path = "data-bus" }
ziskemu = { path = "emulator" }
asm-runner = { path = "emulator-asm/asm-runner" }
executor = { path = "executor" }
lib-c = { path = "lib-c" }
zisk-pil = { path = "pil" }
precomp-arith-eq = { path = "precompiles/arith_eq" }
precomp-arith-eq-384 = { path = "precompiles/arith_eq_384" }
precompiles-common = { path = "precompiles/common" }
precompiles-helpers = { path = "precompiles/helpers" }
precomp-keccakf = { path = "precompiles/keccakf" }
precomp-sha256f = { path = "precompiles/sha256f" }
precomp-big-int = { path = "precompiles/big_int" }
riscv = { path = "riscv" }
rom-setup = { path = "rom-setup" }
server = { path = "server" }
sm-arith = { path = "state-machines/arith" }
sm-binary = { path = "state-machines/binary" }
sm-main = { path = "state-machines/main" }
sm-mem = { path = "state-machines/mem" }
sm-frequent-ops = { path = "state-machines/frequent-ops" }
mem-common = { path = "state-machines/mem-common" }
mem-planner-cpp = { path = "state-machines/mem-cpp" }
sm-rom = { path = "state-machines/rom" }
zisk-witness = { path = "witness-computation" }
ziskclib = { path = "ziskclib" }
ziskos = { path = "ziskos/entrypoint" }
circuit = { path = "tools/circuit" }
zisk-sdk = { path = "sdk" }
zisk-build = { path = "ziskbuild" }

# Distributed crates
zisk-distributed-common = { path = "distributed/crates/common" }
zisk-distributed-coordinator = { path = "distributed/crates/coordinator" }
zisk-distributed-grpc-api = { path = "distributed/crates/grpc-api" }
zisk-distributed-prover = { path = "distributed/crates/worker" }

# Proofman (local monorepo)
proofman = { path = "pil2-proofman/proofman" }
proofman-common = { path = "pil2-proofman/common" }
proofman-macros = { path = "pil2-proofman/macros" }
proofman-verifier = { path = "pil2-proofman/verifier" }
proofman-util = { path = "pil2-proofman/util" }
proofman-cli = { path = "pil2-proofman/cli" }
proofman-hints = { path = "pil2-proofman/hints" }
proofman-starks-lib-c = { path = "pil2-proofman/provers/starks-lib-c" }
pil-std-lib = { path = "pil2-proofman/pil2-components/lib/std/rs" }
witness = { path = "pil2-proofman/witness" }
fields = { path = "pil2-proofman/fields" }
pilout = { path = "pil2-proofman/pilout" }
curves = { path = "pil2-proofman/curves" }

# External dependencies
rayon = "1.10"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
itertools = "0.14"
colored = "3"
ark-ff = "0.5.0"
ark-std = "0.5.0"
ark-secp256k1 = "0.5"
ark-bn254 = "0.5.0"
ark-bls12-381 = "0.5.0"
sysinfo = "0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
anyhow = "1.0"
libloading = "0.8"
named-sem = "0.2.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "json",
] }
tracing-appender = "0.2"
mpi = { version = "0.8.0" }
static_assertions = "1"

clap = { version = "4", features = ["derive", "env"] }
futures = { version = "0.3" }
thiserror = { version = "2" }
bytes = "1.0"

tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = { version = "0.10.9", features = ["compress"] }

# gRPC dependencies
tonic = "0.14"
tonic-prost = "0.14"
tonic-build = "0.14"
tonic-prost-build = "0.14"
# Protocol Buffers support - match tonic's prost version
prost = "0.14"
prost-types = "0.14"
config = "0.15"
toml = "0.9"
borsh = { version = "1.5", features = ["derive"] }
reqwest = { version = "0.12", features = [
    "stream",
    "json",
    "rustls-tls",
], default-features = false }
bytemuck = "1.23"
zstd = "0.13"

# pil2-proofman additional dependencies
log = { version = "0.4", default-features = false }
env_logger = "0.11"
rand = "0.9"
crossbeam-channel = "0.5.15"
serde_arrays = "0.2"
blake3 = "1.3.1"
csv = "1.3.1"
tokio-util = "0.7.16"
prost-build = "0.13"
