[package]
name = "pil2-compiler-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pil2c"
path = "src/main.rs"

[dependencies]
prost = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = { workspace = true }
tracing-subscriber = "0.3"
indexmap = { version = "2", features = ["serde"] }
regex = "1"
pest = "2"
pest_derive = "2"
tikv-jemallocator = "0.6"

[build-dependencies]
prost-build = { workspace = true }
