[package]
name = "pil2-stark-setup"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

[[bin]]
name = "venus-setup"
path = "src/main.rs"

[[bin]]
name = "venus-bctree"
path = "src/bctree_main.rs"

[dependencies]
fields = { workspace = true, features = ["verify"] }
pilout = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
indexmap = { version = "2", features = ["serde"] }
rug = "1"
stark-recurser-rust = { path = "../stark-recurser-rust" }
tempfile = "3"
rayon = { workspace = true }
tikv-jemallocator = "0.6"
