[package]
name = "pk-setup-rs"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

[[bin]]
name = "generate-key-rs"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
compiler = { path = "vendor/circom/compiler" }
constraint_generation = { path = "vendor/circom/constraint_generation" }
constraint_writers = { path = "vendor/circom/constraint_writers" }
fields = { workspace = true }
parser = { path = "vendor/circom/parser" }
pilout-crate = { package = "pilout", path = "../pil2-proofman/pilout" }
prost = { workspace = true }
program_structure = { path = "vendor/circom/program_structure" }
proofman-starks-lib-c = { path = "../pil2-proofman/provers/starks-lib-c" }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sm-arith = { workspace = true }
sm-binary = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
type_analysis = { path = "vendor/circom/type_analysis" }
wat = "1.249.0"

[features]
default = []
gpu = ["sm-arith/gpu", "sm-binary/gpu"]
