[workspace]
members = ["bin/host", "bin/input-gen", "crates/*"]
exclude = []
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2021"

[workspace.dependencies]
guest-reth = { path = "crates/guest-reth" }
input = { path = "crates/input" }

zisk-sdk = { path = "../../sdk" }

revm = { version = "34.0.0", default-features = false }

# alloy
alloy-primitives = "1.5.6"
alloy = "1.7.3"
alloy-consensus = { version = "1.7.3", default-features = false }
alloy-json-rpc = "1.7.3"
alloy-provider = "1.7.3"
alloy-rpc-client = "1.7.3"
alloy-transport = "1.7.3"
alloy-genesis = "1.7.3"
alloy-eips = "1.7.3"
alloy-rpc-types-eth = "1.7.3"
alloy-rpc-types-debug = "1.7.3"

# reth
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }

# stateless
stateless-reth = { git = "https://github.com/paradigmxyz/stateless", rev = "68cd8e73682d21fed69670fc7eabe25e55c5cdbe", package = "stateless" }

zeth-mpt-state = { git = "https://github.com/eth-act/zkvm-ethereum-mpt.git", tag = "v0.5.0" }

# eth-act
witness-generator = { git = "https://github.com/eth-act/zkevm-benchmark-workload.git", rev = "a1f5dc47df7735500c1d8dfe055e966ee9f8070e" }

# common dependencies
anyhow = "1.0"
async-trait = "0.1"
bincode = "1.3.3"
clap = { version = "4.5.7", features = ["derive", "env"] }
dotenv = "0.15.0"
eyre = "0.6.12"
k256 = { version = "0.13.4" }
tiny-keccak = { version = "2.0.0", features = ["keccak"] }
rayon = "1.11.0"
serde = "1.0"
serde_with = "3.14"
serde_json = "1.0"
tokio = { version = "1.21", default-features = false, features = [
    "rt",
    "rt-multi-thread",
] }
tokio-util = { version = "0.7", features = ["rt"] }
url = "2.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
jsonrpsee = { version = "0.26", features = ["http-client"] }
http = "1.4.0"
tempfile = "3"

[patch."https://github.com/paradigmxyz/stateless.git"]
stateless = { git = "https://github.com/0xPolygonHermez/zisk-patch-stateless.git", branch = "zisk/68cd8e73" }
# stateless = { path = "../zisk-patch-stateless/crates/stateless" }
