[package]
name = "proofman-cli"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

readme = "README.md"

build = "build.rs"

[dependencies]
pilout = { path = "../pilout" }
proofman-util = { path = "../util" }
proofman = { path = "../proofman" }
proofman-common = { path = "../common" }
proofman-verifier = { path = "../verifier" }
witness = { path = "../witness" }
fields = { path = "../fields" }

tracing.workspace = true
libloading.workspace = true
blake3.workspace = true
colored.workspace = true
serde.workspace = true
serde_json.workspace = true
bytemuck.workspace = true

clap = { version = "4.5.38", features = ["derive", "env"] }
tinytemplate = "1.1"
convert_case = "0.8"
regex = "1.12.2"
toml = "0.9.8"

# Distributed mode (mpi) is only supported on Linux x86_64
[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
mpi = { version = "0.8.0" }

[features]
default = []
disable_distributed = ["proofman-common/disable_distributed"]
dev = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(distributed)'] }
