[package]
name = "curves"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

[dependencies]
fields = { path = "../fields" }
num-bigint.workspace = true
num-traits.workspace = true

[dev-dependencies]
rand.workspace = true