[package]
name = "proofman-macros"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

[lib]
proc-macro = true

[dependencies]
rayon.workspace = true

syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[features]
default = []
diagnostic = []
