[package]
name = "pilout"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

[dependencies]
bytes.workspace = true
prost.workspace = true
tracing.workspace = true

[build-dependencies]
prost-build.workspace = true
