[package]
name = "proofman"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

build = "build.rs"

[dependencies]
proofman-common = { path = "../common" }
proofman-macros = { path = "../macros" }
proofman-hints = { path = "../hints" }
proofman-util = { path = "../util" }
proofman-starks-lib-c = { path = "../provers/starks-lib-c" }
proofman-verifier = { path = "../verifier" }
curves = { path = "../curves" }
witness = { path = "../witness" }
pil-std-lib = { workspace = true }

tracing.workspace = true
fields.workspace = true
libloading.workspace = true
colored.workspace = true
serde_json.workspace = true
serde.workspace = true
rayon.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
bytemuck.workspace = true
blake3.workspace = true
crossbeam-channel.workspace = true
borsh.workspace = true
tokio.workspace = true
tokio-util.workspace = true
csv.workspace = true
rand = "0.9"
chrono = "0.4.42"

# Distributed mode (mpi) is only supported on Linux x86_64
[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
mpi = { version = "0.8.0" }

[features]
default = []
no_lib_link = ["proofman-common/no_lib_link"]
disable_distributed = []
diagnostic = ["proofman-macros/diagnostic"]
packed = ["proofman-common/packed"]
gpu = ["proofman-common/gpu", "proofman-starks-lib-c/gpu"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(distributed)'] }
