[package]
name = "test-recursive"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

[lib]
crate-type = ["dylib"]

[dependencies]
proofman-common.workspace = true
proofman-macros.workspace = true
proofman-starks-lib-c = { path = "../../provers/starks-lib-c" }
proofman.workspace = true
witness.workspace = true
pil-std-lib.workspace = true
tracing.workspace = true
fields.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_arrays.workspace = true
rayon.workspace = true
num-bigint.workspace = true
bytemuck.workspace = true
libloading.workspace = true

[features]
default = []
diagnostic = []
dev = []
gpu = ["proofman-common/gpu"]