[package]
name = "proofman-starks-lib-c"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

build = "build.rs"

[dependencies]
tracing.workspace = true
crossbeam-channel.workspace = true

[features]
default = []
no_lib_link = []
disable_distributed = []
gpu = []
no_cpp_compilation = []
